<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string
    name="app_name">Android App Test</string>
  <string
    name="name">Name:</string>
  <string
    name="default_email">Default Recipient Email:</string>
  <string
    name="email">Email:</string>
  <string
    name="save">Save</string>
  <string
    name="pounds">Pounds</string>
  <string
    name="kilos">Kilograms</string>
  <string
    name="default_email_prompt">Choose a default recipient</string>
  <string-array
    name="default_email_array">
    <item>Myself</item>
    <item>Existing Contact</item>
    <item>New Contact</item>
  </string-array>
  <string name="error">Error!</string>
  <string name="name_missing">You forgot to enter a name!</string>
  <string name="email_missing">You forgot to enter an email!</string>
  <string name="ok">ok</string>
  <string name="weight_number">You must put a number for the weight!</string>
  <string name="cancel">Cancel</string>
</resources>
