<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  android:id="@+id/widget0"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout
    android:id="@+id/widget1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/name"
      android:id="@+id/textView1"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true">
    </TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/nameEditText"
      android:inputType="textPersonName"
      android:layout_below="@+id/textView1"
      android:layout_alignParentLeft="true">
    </EditText>
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/email"
      android:id="@+id/textView2"
      android:layout_below="@+id/nameEditText"
      android:layout_alignParentLeft="true">
    </TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/emailEditText"
      android:inputType="textEmailAddress"
      android:layout_below="@+id/textView2"
      android:layout_alignParentLeft="true">
    </EditText>
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/default_email"
      android:id="@+id/textView3"
      android:layout_below="@+id/emailEditText"
      android:layout_alignParentLeft="true">
    </TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/defaultEmailEditText"
      android:inputType="textEmailAddress"
      android:layout_below="@+id/textView3"
      android:layout_alignParentLeft="true" />
    <Button
      android:text="@string/save"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:id="@+id/saveButton"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true">
    </Button>
    <RadioGroup
      android:layout_width="wrap_content"
      android:id="@+id/optionsGroup"
      android:layout_height="wrap_content"
      android:layout_below="@+id/defaultEmailEditText"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="14dp">
      <RadioButton
        android:id="@+id/optionsPounds"
        android:text="@string/pounds"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:checked="true">
      </RadioButton>
      <RadioButton
        android:id="@+id/optionsKilos"
        android:text="@string/kilos"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
      </RadioButton>
    </RadioGroup>
  </RelativeLayout>
</ScrollView>
